hphp/hack/test/typecheck/unresolved_compare.php.exp
File "unresolved_compare.php", line 13, characters 10-16:
This comparison has invalid types.  Only comparisons in which both arguments are strings, nums, or DateTime are allowed (Typing[4240])
File "unresolved_compare.php", line 3, characters 13-13:
This is an object of type A (known to be exactly the class 'A')
File "unresolved_compare.php", line 3, characters 13-13:
This is an object of type B (known to be exactly the class 'B')
